--- a/correct_steps_v_1_0_3.ipynb
+++ b/correct_steps_v_1_0_3.ipynb
@@ -3932,7 +3932,7 @@
     "                    date_time_window_size_after=ismember(Time_window_size_after,data_datenum)\n",
     "                    idx_time_window_size_after = [x for x in date_time_window_size_after if x == x]\n",
     "                    df_GPS=df_GPS.drop(idx_time_window_size_after) #drop the data. #make sure later you need to reset the index of DF!\n",
-    "                    df_GPS=df_GPS.reset_index(drop=True)\n"
+    "                    df_GPS=df_GPS.reset_index(drop=True)\n",
     "                    \n",
     "                else:\n",
     "                    print(\"              >>>>>>A linear fitting will be performed\")\n",
